plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.realtime'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Lombok 사용을 위해 추가
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    // JWT 토큰 사용을 위해 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

    // Spring Security 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // WebSocket & STOMP 지원
    implementation 'org.springframework.boot:spring-boot-starter-websocket'  // WebSocket 지원
    implementation 'org.springframework:spring-messaging'  // STOMP 지원

    // Spring AMQP (RabbitMQ)
    implementation 'org.springframework.boot:spring-boot-starter-amqp'  // RabbitMQ와 연결

    // JPA 사용
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA 사용
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.1.3'  // MariaDB JDBC 드라이버

    // 개발 중 자동 리로딩을 위한 의존성
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    
    // jjwt 의존성
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
  	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
  	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5' // jackson serializer
  	
  	// validation 스타터 의존성
  	implementation 'org.springframework.boot:spring-boot-starter-validation'
}

tasks.named('test') {
    useJUnitPlatform()
}
